[package]
name = "rustplexity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
regex = "1.5.4"
num = "0.4.0"
anyhow = "1.0.44"
lazy_static = "1.4.0"

